2024-02-08T00:38:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7823130636 # 96
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
* notice: last 14d: unq all: 7 23
* notice: prev accum: outdated-unq outdated-all / unq all: 300 1049 / 308 1074
* notice: next accum: outdated-unq outdated-all / unq all: 301 1051 / 308 1074
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-24] / []

2024-02-07T08:10:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7811746418 # 94
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
* notice: last 14d: unq all: 8 25
* notice: prev accum: outdated-unq outdated-all / unq all: 300 1049 / 307 1072
* notice: next accum: outdated-unq outdated-all / unq all: 300 1049 / 308 1074
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-07]

2024-02-07T00:37:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7808130916 # 93
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
* notice: last 14d: unq all: 7 23
* notice: prev accum: outdated-unq outdated-all / unq all: 300 1049 / 306 1068
* notice: next accum: outdated-unq outdated-all / unq all: 300 1049 / 307 1072
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +2 +8 -0 -0 / 2 8
* notice: removed / changed dates: [] / [2024-02-06]

2024-02-06T16:10:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7802652958 # 92