@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-08T00:38:29Z",
-  "count_outdated" : 1051,
-  "uniques_outdated" : 301,
+  "timestamp" : "2024-02-08T16:10:35Z",
+  "count_outdated" : 1055,
+  "uniques_outdated" : 302,
   "count" : 1074,
   "uniques" : 308,
   "views" : [
-    {
-      "timestamp": "2024-01-25T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-28T00:00:00Z",
       "count": 3,
