@@ -1,12 +1,7 @@
 {
-  "count": 23,
-  "uniques": 7,
+  "count": 19,
+  "uniques": 6,
   "views": [
-    {
-      "timestamp": "2024-01-25T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-28T00:00:00Z",
       "count": 3,
